<resources>
    <string name="app_name">TaxiApp</string>
    <string name="title_activity_passenger">Passenger Sign in</string>
    <string name="title_activity_driver">Driver Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_mobile">This mobile should contain 10 digits</string>
    <string name="error_invalid_nic">This NIC number should contain 9 digits</string>

    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="txtCredits"><a href="http://www.google.com">Update my Password </a></string>
    <string name="title_activity_registration_driver">RegistrationDriverActivity</string>


    <!-- Strings related to passenger register -->
    <string name="action_sign_up1_passenger">Register </string>
    <string name="action_sign_up2_passenger">Sign Up </string>
    <string name="prompt_fname">First Name</string>
    <string name="prompt_lname">Last Name</string>
    <string name="prompt_phone">Mobile</string>
    <string name="prompt_nic">NIC</string>
    <string name="prompt_dob">DOB</string>
    <string name="date_label_set">date format:xxxx-xx-xx</string>
    <string name="prompt_cpassword">Confirm Password</string>
    <string name="prompt_sign_up_driver">Driver Registration</string>
    <string name="view_image">app_logo</string>
    <string name="google_maps_key">eeeeeeeeeeeeeeee</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>


    <!-- Strings related to passenger register -->
    <string name="enter_license_number">License Number</string>
    <string name="action_sign_up1_driver">Register </string>

    <!-- Strings related to passenger placehire -->
    <string name="hire_origin">Hire Place</string>
    <string name="hire_destination">Destination Place</string>
    <string name="place_hire">Place Hire</string>
    <string name="hire_taxi">Hire Taxi</string>

    <!-- Strings related to reset password -->
    <string name="reset_pw">Reset Password</string>
    <string name="current_email">Current Email</string>
    <string name="current_pw">Current Password</string>
    <string name="new_pw">New Password</string>
    <string name="not_yet_have_an_acount">Not yet have an acount?</string>
    <string name="register">REGISTER</string>
    <string name="register_passenger">REGISTER</string>
    <string name="not_yet_have_an_acount_passenger">Not yet have an acount?</string>
    <string name="driver">Driver</string>
    <string name="customer">Customer</string>
    <string name="start_as_a">Start As a</string>

    <string name="country_prompt">Choose a vehicle</string>


    <string-array name="vehicle_arrays">
        <item>car</item>
        <item>budget</item>
        <item>hybrid</item>
        <item>van</item>
    </string-array>

    <string name="title_activity_driver_home_page">DriverHomePageActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Hire Invoices</string>
    <string name="tab_text_2">Payment Statement</string>
    <string name="tab_text_3">Feedback</string>
    <string name="driver_homepage_title">Driver Homepage</string>


</resources>
