<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="com.example.hsenid.taxiapp.RegistrationPassengerActivity">


    <TextView
            android:id="@+id/label_passenger_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Passenger Registration"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="16dp"/>

    <LinearLayout
            android:id="@+id/registration_form_passenger"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="20dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="52dp">


        <EditText
                android:id="@+id/fname_register_passenger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_fname"
                android:inputType="textPersonName"/>

        <EditText
                android:id="@+id/lname_register_passenger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_lname"
                android:inputType="textPersonName"/>

        <AutoCompleteTextView
                android:id="@+id/email_register_passenger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"/>


        <EditText
                android:id="@+id/mobile_register_passenger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_phone"
                android:inputType="phone"/>

        <EditText
                android:id="@+id/nic_register_passenger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_nic"
                android:inputType="number"/>

        <EditText
                android:id="@+id/dob_register_passenger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"/>

        <EditText
                android:id="@+id/password_register_passenger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/registration_form_passenger"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

        <EditText
                android:id="@+id/cpassword_register_passenger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_cpassword"
                android:imeActionId="@+id/registration_form_passenger"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

        <Button
                android:id="@+id/signup_register_passenger"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_up1_passenger"
                android:textStyle="bold"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
