<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.hsenid.taxiapp.passenger.PassengerActivity"
    android:weightSum="1">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress_passenger"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageView_passenger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.39"
        android:paddingBottom="-20dp"
        android:paddingTop="-10dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <ScrollView
        android:id="@+id/login_form_passenger"
        android:layout_width="310dp"
        android:layout_height="194dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="0.14">

        <LinearLayout
            android:id="@+id/email_login_form_passenger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email_passenger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_passenger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/sign_in_button_passenger"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/infoTxtCredits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:autoLink="web"
                android:linksClickable="true"
                android:text="@string/txtCredits"
                android:textColorLink="@color/colorPrimaryDark">

            </TextView>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/label_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/not_yet_have_an_acount_passenger"
        android:textSize="24sp" />

    <Button
        android:id="@+id/register_button_passenger"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:onClick="gotoPassengerRegistrationPage"
        android:text="@string/register_passenger" />
</LinearLayout>
