<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hsenid.taxiapp.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_marginLeft="65dp"
        android:layout_marginStart="65dp"
        android:maxHeight="1000dp"
        android:minHeight="180dp"
        android:minWidth="200dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="250dp"
        android:elevation="1dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/homepage_driver_btn"
            android:layout_width="191dp"
            android:layout_height="89dp"
            android:text="@string/driver" />

        <Button
            android:id="@+id/homepage_cus_btn"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:text="@string/customer" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="31dp"
        android:text="@string/start_as_a"
        android:textSize="30sp" />

</RelativeLayout>
